# REU2025CppBootcamp

./: .gitignore  README.md
1_Hello/: Hello  Hello.cpp  README.md  compile.sh
2_Orbit/: CMakeLists.txt  README.md
2_Orbit/app/: CMakeLists.txt  orbit_example.cpp
2_Orbit/include/orbitsolver/: CMakeLists.txt  io.hpp  orbits.hpp  orbitutils.hpp
2_Orbit/python/: plot_orbit.py
2_Orbit/src/: CMakeLists.txt  io.cpp  orbits.cpp
